# Team-40

./: README.md  package-lock.json
goatmitra/App/user/: firebase.json  pubspec.yaml
goatmitra/App/user/android/app/: build.gradle  google-services.json
goatmitra/App/user/lib/: firebase_options.dart  main.dart
goatmitra/backend/: README.md  app.py  catdog.py  goat_health_dataset.csv  main.py  predict.py  pyproject.toml  svc_goat_health_model.joblib
goatmitra/backend/templates/: result.html
gramhunar/backend/: app.js  appError.js  db.js  package-lock.json  package.json  server.js
gramhunar/backend/controllers/: activityController.js  classController.js  login.js  schoolController.js  studentController.js  teacherController.js
gramhunar/backend/helpers/: accees_contol.sql  activities.sql  activities_and_classes.sql  classes.sql  schools.sql  students.sql  teachers.sql
gramhunar/backend/router/: activityRouter.js  classRouter.js  loginRouter.js  schoolRouter.js  studentRouter.js  teacherRouter.js
gramhunar/backend/utils/: email.js
gramhunar/frontend/: index.html  package-lock.json  package.json
gramhunar/frontend/backend/: index.js
gramhunar/frontend/backend/models/: Teacher.js
gramhunar/frontend/data/: actitvities.js  activities.js  classes.js  schools.js
gramhunar/frontend/src/: App.jsx  main.jsx
gramhunar/frontend/src/Components/: Activities.jsx  AddActivity.jsx  CardsContainer.jsx  Class.jsx  Classes.jsx  LcardContainer.css  LcardContainer.jsx  LinkActivity.jsx  Login.jsx  Navbar.jsx  Schools.jsx  Sidebar.css  Sidebar.jsx  Student.jsx
(+29 files in other folders)
