[project]
name = "goatmitra"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Pratik Jindal", email = "117007380+jindalpratik@users.noreply.github.com"},
]
dependencies = [
    "tensorflow>=2.15.1",
    "tensorflow-io-gcs-filesystem==0.31.0",
    "pip>=24.0",
    "uvicorn>=0.30.1",
    "fastapi>=0.111.0",
    "matplotlib>=3.9.0",
    "scipy>=1.13.1",
]
requires-python = "==3.10.9"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
